--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p> vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/> humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-<video id="filme" controls="controls" poster="_imagens/video-mini01.jpg">
+<video id="filme1" controls="controls" poster="_imagens/video-mini01.jpg">
     <source src="_media/how-it-feels.mp4" type="video/mp4"/>
     <source src="_media/how-it-feels.webm" type="video/webm"/>
     <source src="_media/how-it-feels.ogv" type="video/ogg"/>
@@ -93,7 +93,7 @@
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
 
-<video id="filme" controls="controls" poster="_imagens/video-mini02.jpg">
+<video id="filme2" controls="controls" poster="_imagens/video-mini02.jpg">
     <source src="_media/one-day.mp4" type="video/mp4"/>
     <source src="_media/one-day.webm" type="video/webm"/>
     <source src="_media/one-day.ogv" type="video/ogg"/>
